# DRF-HW2.0

./: .env  pyproject.toml  setup.cfg
apps/auth/: urls.py
apps/auto_parks/: models.py  serializer.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparkmodel_create_at_autoparkmodel_updated_at.py
apps/first/: filter.py  managers.py  models.py  serializers.py  views.py
apps/first/choices/: boody_type_choices.py
apps/first/migrations/: 0001_initial.py  0002_car_create_at_car_updated_at.py  0003_car_body_type_alter_car_brand_alter_car_price_and_more.py  0004_alter_car_options_car_auto_park.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  jwt_conf.py  rest_conf.py
core/: models.py  pagination.py
first/: models.py  views.py
